buttons aligned, centred and underline issue fixed along with photos for bookings section

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -25,7 +25,7 @@
   margin: 20px;
   padding: 10px;
   border-radius: 10px;
-  opacity: 0.9;
+  opacity: 0.8;
 }
 
 .car-card, .booking-card {
@@ -35,19 +35,16 @@
   border-radius: 10px;
   color: black;
   max-width: 300px;
-
-
 }
-
-
 
 .btn-twitter {
   color: white;
+  text-align: center;
   border: 1px solid #808080;
-  // padding: 15px 20px;
+  text-decoration: none;
   border-radius: 50px solid #808080;
   padding: 10px 50px;
-  margin: 30px  40px;
+  margin: 60px  40px;
   font-weight: bolder;
   font-size: 20px;
   background: #808080;
@@ -61,5 +58,19 @@
 
 .car-card-photo {
   height: 200px;
-  width: auto;
+  width: 100%;
 }
+
+
+#dashboard-car-link {
+  position: relative;
+  left: 165px;
+}
+
+
+
+
+
+
+
+
